fixed impact tiles horizontal alignment

--- a/src/styles/Statistics.css
+++ b/src/styles/Statistics.css
@@ -8,7 +8,7 @@ h2 {
 
 .statistics-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-gap: 20px;
   align-items: center;
   margin: 1%;
